Completed project files

--- a/contact.html
+++ b/contact.html
@@ -25,3 +25,23 @@
     </nav>
     </div>
 </header>
+<main class="wrapper">
+        <div class="wrapper2">
+            <h1>Contact</h1>
+            <hr>
+        </div>
+        <form class="form" id="contact" method="post" action="mail_process.php">
+                <label>Name<br /><input type="text" name="name" id="name" alt="name field" required="required" /></label><br />
+                <label>Email<br /><input type="text" name="email" id="e-mail" alt="email field" required="required" /></label><br />
+                <label>Message<br /><textarea name="message" rows="12"></textarea></label><br />
+                <label for="submit"><input type="submit" value="Submit" /></label>
+        </form>
+    </main>
+<footer>
+        <div class="foot">
+            <em>Copyright &copy; 2018 Steve Mattis</em>
+            <p><a href="http://validator.w3.org/check/referer"><img src="http://www.netwebdev.net/webclass/images/valid-html5.png" alt="Valid HTML5!" height="15" width="80" /></a></p>
+        </div>
+    </footer>
+</body>
+</html>
