--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="A digital portfolio created by and for Steve Mattis">
@@ -10,37 +11,58 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Steve Mattis Portfolio</title>
 </head>
-<body>
-<header>
-    <div class="wrapper">
-    <h1 class="nav-head">Steve Mattis</h1>
-    <nav>
-            <ul>
-                <li><a href="../homework/index.html">About</a></li>
-                <li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-    </nav>
-    </div>
-</header>
-<main class="wrapper">
-    <div class="wrapper2">
-        <h1>About Me</h1>
-        <hr>
-    <article>
-        <p>
-                Bacon ipsum dolor amet short ribs jerky turducken sausage strip steak. Meatball ground round beef tenderloin tongue short loin drumstick. Beef ribs landjaeger pig boudin andouille burgdoggen salami, bacon frankfurter buffalo shank venison swine pork. Chicken cupim jowl bacon pork loin fatback short ribs flank landjaeger prosciutto.
-        </p>
-        <p>
-                Short loin tail boudin filet mignon ham hock hamburger ham capicola cow t-bone frankfurter chicken ground round meatloaf. Leberkas brisket buffalo turducken venison, shankle picanha alcatra jerky cow shank flank. Corned beef kevin prosciutto meatball, tail chicken rump sirloin pork t-bone fatback. Bacon buffalo salami, leberkas pork loin cow rump landjaeger.
-        </p>
-    </article>
-    </div>
-</main>
-<footer>
 
-</footer>
+<body>
+    <header>
+        <div class="wrapper">
+            <h1 class="nav-head">Steve Mattis</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="../homework/index.html">About</a>
+                    </li>
+                    <li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="wrapper">
+        <div class="wrapper2">
+            <h1>About Me</h1>
+            <hr>
+            <article class="about-article">
+                    <figure class="about-figure">
+                            <img src="https://placehold.it/200x150" alt="placeholder image">
+                    </figure>
+                <p style="margin-top: 7px;">
+                    Bacon ipsum dolor amet short ribs jerky turducken sausage strip steak. Meatball ground round beef tenderloin tongue short
+                    loin drumstick. Beef ribs landjaeger pig boudin andouille burgdoggen salami, bacon frankfurter buffalo
+                    shank venison swine pork. Chicken cupim jowl bacon pork loin fatback short ribs flank landjaeger prosciutto. Bacon ipsum dolor amet short ribs jerky turducken sausage strip steak. Meatball ground round beef tenderloin tongue short
+                    loin drumstick. Beef ribs landjaeger pig boudin andouille burgdoggen salami, bacon frankfurter buffalo
+                    shank venison swine pork. Chicken cupim jowl bacon pork loin fatback short ribs flank landjaeger prosciutto.
+                </p>
+                <p>
+                    Short loin tail boudin filet mignon ham hock hamburger ham capicola cow t-bone frankfurter chicken ground round meatloaf.
+                    Leberkas brisket buffalo turducken venison, shankle picanha alcatra jerky cow shank flank. Corned beef
+                    kevin prosciutto meatball, tail chicken rump sirloin pork t-bone fatback. Bacon buffalo salami, leberkas
+                    pork loin cow rump landjaeger.
+                </p>
+            </article>
+        </div>
+    </main>
+    <footer>
+        <div class="foot">
+            <em>Copyright &copy; 2018 Steve Mattis</em>
+            <p><a href="http://validator.w3.org/check/referer"><img src="http://www.netwebdev.net/webclass/images/valid-html5.png" alt="Valid HTML5!" height="15" width="80" /></a></p>
+        </div>
+    </footer>
 </body>
+
 </html>
