--- a/portfolio.html
+++ b/portfolio.html
@@ -25,3 +25,82 @@
     </nav>
     </div>
 </header>
+<main class="wrapper">
+        <div class="wrapper2">
+            <h1>Portfolio</h1>
+            <hr>
+        <article class="container">
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="hangman placeholder image">
+                <div class="text-block">
+                    <h5 style="padding: 0px 121px;">Hangman</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="rpg game placeholder image">
+                <div class="text-block">
+                    <h5 style="padding-left: 117px; padding-right: 118px;">RPG Game</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="trivia game placeholder image">
+                <div class="text-block">
+                    <h5 style="padding-left: 113px; padding-right: 114px;">Trivia Game</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="rutgers info widget placeholder image">
+                <div class="text-block">
+                    <h5 style="padding: 0px 90px;">Rutgers Info Widget</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="rock paper scissors placeholder image">
+                <div class="text-block">
+                    <h5 style="padding: 0px 91px;">Rock Paper Scissors</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="placeholder image">
+                <div class="text-block">
+                    <h5 style="padding-left: 110px; padding-right: 111px;">Coming Soon</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="placeholder image">
+                <div class="text-block">
+                    <h5 style="padding-left: 110px; padding-right: 111px;">Coming Soon</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="placeholder image">
+                <div class="text-block">
+                    <h5 style="padding-left: 110px; padding-right: 111px;">Coming Soon</h5>
+                </div>
+            </div>
+
+            <div class="container2">
+                <img src="https://placehold.it/300x175" alt="placeholder image">
+                <div class="text-block">
+                    <h5 style="padding-left: 110px; padding-right: 111px;">Coming Soon</h5>
+                </div>
+            </div>
+        </article>
+        </div>
+</main>
+<footer>
+        <div class="foot">
+            <em>Copyright &copy; 2018 Steve Mattis</em>
+            <p><a href="http://validator.w3.org/check/referer"><img src="http://www.netwebdev.net/webclass/images/valid-html5.png" alt="Valid HTML5!" height="15" width="80" /></a></p>
+        </div>
+    </footer>
+</body>
+</html>
