--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="../homework/index.html">About</a>
+                        <a href="index.html">About</a>
                     </li>
                     <li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
                     <li>
