--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <h1 class="nav-head">Steve Mattis</h1>
     <nav>
             <ul>
-                <li><a href="../homework/index.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
